# nsmiracle

./: Makefile.am  README.md  configure.ac
addons/fountain-codes-broadcast/fountain-codes-base/: autogen.sh  configure.ac
addons/sandbox/src/: Makefile.am  channel-test.cc  channel-test.h  initlib.cc  module-middle.cc  module-middle.h  module-receive.cc  module-receive.h  module-send.cc  module-send.h  mypacket-tracer.cc  mypacket.cc  mypacket.h  sandbox-clmsg-tracer.cc  sandbox-clmsg-tracer.h  sandbox-clmsg.cc  sandbox-clmsg.h  sandbox-defaults.tcl  sandbox-plugin1.cc  sandbox-plugin1.h
addons/umts/src/: Makefile.am  am.cc  am.h  init.cc  mac-module.cc  mac-module.h  rlc-module.cc  rlc-module.h  rlc.h  um.cc  um.h  umts-correlation.cc  umts-correlation.h  umts-default.tcl  umts-phy.cc  (+16 more)
main/: .README.swp  COPYING  INSTALL  Makefile.am  README  TODO  configure.ac  doc-miracle.cfg
main/aodv/: Makefile.am  aodv-defaults.tcl  aodv-pkt.h  aodv-proc.tcl  aodv-rt-table.cc  aodv-rt-table.h  aodv-tracer.cc  aodv-tracer.h  configure.ac  initlib.cc  module-aodv.cc  module-aodv.h  testAodv.tcl
main/cbr/: Makefile.am  cbr-module.cc  cbr-tracer.cc  initlib.cc
main/cltrace/: Makefile.am  autogen.sh  clcommontracer.cc  clcommontracer.h  configure.ac  verboseclcmntracer.cc  verboseclcmntracer.h
main/dei80211mr/: Makefile.am  configure.ac  dei80211mr-defaults.tcl  mrtracer.cc  mrtracer.h
main/ip/: Makefile.am  initlib.cc  ip-clmsg.h  ip-interface.h  ip-routing.cc  ipmodule.cc  ipmodule.h  mrinit.cc  routing-tracer.cc
main/link/: Makefile.am  configure.ac  dropinterface.cc  dropinterface.h  initlib.cc  link.tcl  link_channel.cc  link_channel.h  test_duplexlink_tcp.tcl  test_link_udp.tcl
main/m4/: Makefile.am  dei80211mr.m4  nsallinone.m4  nsmiracle.m4
main/mac802_11/: 802.11-module.cc  802_11-tracer.cc  802_11-tracer.h  Makefile.am  alttracermac80211.cc  arp-tracer.cc  arp-tracer.h  configure.ac  initlib.cc  mac802_11-default.tcl  mac802_11-proc.tcl  miracle_mac-802_11.cc  miracle_mac-802_11.h  mrcl_arp.cc  mrcl_arp.h  mrcl_ll.cc  mrcl_ll.h  mrcl_mac-timers.cc  mrcl_mac-timers.h
main/marq/: Makefile.am  initlib.cc  marq-defaults.tcl  marq.h
main/mll/: Makefile.am  initlib.cc  marptable.cc  marptable.h  mll-clmsg.cc  mll-clmsg.h  mll-default.tcl  mll-module.cc  mll-module.h  mll-tracer.cc  mll-tracer.h
main/mmac/: Makefile.am  csma_state_machine.dot  initlib.cc  macGeneric.cc  mmac-aloha-adv.cpp  mmac-aloha-adv.dot  mmac-aloha-adv.h  mmac-aloha.cc  mmac-clmsg.cc  mmac-csma.cc  mmac-csma.h  mmac.cc  mmac.h
main/mobileNode/: 802.11-module.cc  802.11-module.h  802_11-tracer.cc  802_11-tracer.h  Makefile.am  configure.ac  initlib.cc  ipmodule.cc  ipmodule.h  mbposition.cc  mbposition.h  ns-mobilenode.tcl  transport-module.cc  transport-module.h  wirelessch-module.cc  wirelessch-module.h  wirelessphy-module.cc  wirelessphy-module.h
main/mobility/: Makefile.am  bmposition.cc  bmposition.h  configure.ac  gmposition.cc  gmposition.h  group-mobility.cc  group-mobility.h  initlib.cc  position-clmsg.cc  position-clmsg.h  positiondb.cc
main/mphy/: Makefile.am  bpsk.cc  bpsk.h  channel-manager.cc  channel-manager.h  clmsg-phy-on-off-switch.cc  clmsg-phy-on-off-switch.h  initlib.cc  interference_miv.cc  mantenna.h  mfullpropagation.cc  mphy-sense.cc  mphy-tracer.cc  mpropagation.h  mspectralmask.h  phymac-clmsg-tracer.cc  phymac-clmsg-tracer.h  phymac-clmsg.cc  rect_spectral_mask.cc  sinr-tracer.cc
main/nsmiracle/: Mainpage.dox  Makefile.am  README  bin.cc  channel-module.cc  channel-module.h  chsap.cc  chsap.h  clmessage.cc  clmsg-discovery.cc  clmsg-discovery.h  clmsg-stats.cc  clmsg-stats.h  clsap.cc  configure.ac  connector-trace.cc  connector-trace.h  deprecated.h  initlib.cc  logger.cpp  logger.h  module.cc  module.h  node-core.cc  node-core.h  packettracer.cc  packettracer.h  plugin.cc  plugin.h  sap.cc
main/phy802_11/: Makefile.am  configure.ac  deipropagation.h  initlib.cc  mrcl_freespace.cc  mrcl_freespace.h  mrcl_propagation.cc  mrcl_tworayground.cc  mrcl_tworayground.h  mrcl_wireless-phy.cc  mrcl_wireless-phy.h  phy-tracer.cc  phy-tracer.h  simplepathloss.cc  simplepathloss.h  wirelessphy-default.tcl  wirelessphy-module.cc  wirelessphy-module.h  wirelessphy-proc.tcl
main/port/: Makefile.am  configure.ac  initlib.cc  port-defaults.tcl  port-map.cc  port-map.h  port-mux.cc  port-mux.h
main/routing/: Makefile.am  configure.ac  hop-count-metric.cc  hop-count-metric.h  initlib.cc  ip-address-codec.cc  ip-address-codec.h  ip-address.cc  ip-address.h  metric.cc  metric.h  mrcl-address.cc  mrcl-address.h  mrcl-routing-static.cc  mrcl-routing-static.h  routing-module.cc  routing-module.h  routing-proc.tcl  routing-queue.cc  routing-queue.h  routing-tracer.cc  routing-tracer.h  test.tcl  utility.cc  utility.h
main/samples/: Makefile.am  README  bpsk_aloha.tcl  bpsk_fdma.tcl  bpsk_freespace.tcl  bpsk_fullpropagation.tcl  dei80211mr_freescpace.tcl  dei80211mr_infrastruct_plus_wired_tcp.tcl  dei80211mr_infrastruct_plus_wired_voip.tcl  dei80211mr_mixed_wireless_wired_static_routing.tcl  dei80211mr_plot_propagation_from_trace.sh  dei80211mr_tworayground.tcl  ip_routing_static.tcl  link_cbr.tcl  link_cbr_bidirectional.tcl  link_with_errors_cbr.tcl  plot_am_seqno.sh  plot_mphy_rx_power.sh  plot_propagation_from_trace.sh  plot_sinr.sh  underwater_aloha_bpsk.tcl  underwater_aloha_shannon.tcl
main/tcp/: Makefile.am  configure.ac  initlib.cc  tcp-defaults.tcl  tcp-module.cc  tcp-module.h  tcp-modules.tcl  tcp-tracer.cc  tcp-tracer.h
main/trace/: Makefile.am  configure.ac  headertracer.cc  headertracer.h
main/uwm/: Makefile.am  test_uwlib.cc  underwater-channel.cc  underwater-channel.h  underwater-mpropagation.h  underwater-phy.cc  underwater-phy.h  underwater-shannon.cc  underwater-shannon.h  underwater.cc  underwater.h  uwlib.h  uwmphy-tracer.cc  uwmphybpsk-tracer.cc
main/wirelessch/: Makefile.am  configure.ac  initlib.cc  wirelessch-default.tcl  wirelessch-dumb-default.tcl  wirelessch-dumb.cc  wirelessch-dumb.h  wirelessch-module.cc  wirelessch-module.h  wirelessch-proc.tcl
(+298 files in other folders)
